# ReactiveBot

./: .gitignore  README.md  adb_actions.py  adb_controller.py  adbcontroller.py  mask_builder.py  objects.py  pokemon_go_example.py  pyproject.toml  requirements.txt
DeviceTemplate/: states.py  trade_graph.json
DeviceTemplate/pokemon_go_trade_v1/: trade_graph.json
DeviceTemplate/pokemon_go_trade_v2/: trade_graph.json
